traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:17: error: type mismatch;
 found   : Unit
 required: Boolean
      setPos(getX(),getY()+1)
            ^TraversalZigZag:20: error: type mismatch;
 found   : Unit
 required: Boolean
      for(k<- 1 to 6){
           ^